"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-04-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-19-chpsim-04-07:
	  Perm and clean up last patch: CHPSIM_CONTEXT_CARRIES_REFERENCES.  


	* HACKT-00-01-04-main-00-81-19-chpsim-04-06:
	  Partial redo: packed a global_references_set reference member
		to chpsim's nonmeta_context, passing fewer arguments around.
	  sim/chpsim/State.cc: pulled out execute call from __step(), 
		leaving __step to do mostly post-processing.  


	* HACKT-00-01-04-main-00-81-19-chpsim-04-05:
	  Reverted last patch, caused major test failures.  
	  Need to re-do it more systematically.  


2007-04-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-19-chpsim-04-04:
	  No new changes enabled yet.
	  More CHPSIM_DELAYED_SUCCESSOR_CHECKS mark-ups, particularly
		in the step() method.  
	  Re-organizing pieces of chpsim code to make clean transition
		to new execution model.  


	* HACKT-00-01-04-main-00-81-19-chpsim-04-03:
	  Perm'd CHPSIM_MULTISET_EVENT_QUEUE, and there was much rejoicing...


	* HACKT-00-01-04-main-00-81-19-chpsim-04-02:
	  Started to mark initial cuts for CHPSIM_DELAYED_SUCCESSOR_CHECKS
		but far from completion (disabled with this revision).  
		We push that onto the task stack so we can first
		perm CHPSIM_MULTISET_EVENT_QUEUE, which has been stable
		for a while, and is getting to be a nuisance to read.  
		Then we'll return to regularly scheduled hacking.


	* HACKT-00-01-04-main-00-81-19-chpsim-04-01:
	  ChangeLog abuse: 
	  The goal: slack zero channels and atomic paired send/receives.
	  The plan: Change the current execution model:
		now: execute, recheck, enqueue-with-delay, execute.
		next: recheck, execute-now, first-check-after-delay, recheck
		rationale: pay prefix delay up-front before first check